src/objects/DGRLSettings__c.object
<CustomObject>
    <fields>
        <fullName>DGRL__c</fullName>
        <label>DGRL</label>
        <referenceTo>DGRL__c</referenceTo>
        <relationshipName>Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_JSON__c</fullName>
        <label>Field JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ui_grid_json__c</fullName>
        <label>ui-grid json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DGRL Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DGRL Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>